# cmake-tutorial

./: CMakeLists.txt  greet.c  main.c
Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step3/MathFunctions/: CMakeLists.txt
mathlib/: mathutils.c  mathutils.h
tests/: test_mathlib.c
